<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_site_demos</name>
  <version>0.0.0</version>
  <description>A package containing demo maps for rmf_site_cmake</description>
  <maintainer email="xiyu@openrobotics.org">Xiyu Oh</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rmf_site_cmake</buildtool_depend>

  <depend>rmf_demos</depend>
  <depend>rmf_demos_gz</depend>
  <depend>rmf_site_map_server</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
